[gd_scene load_steps=3 format=3 uid="uid://main_menu_scene"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Hide and Seek with AI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Inspired by OpenAI Research"
horizontal_alignment = 1
modulate = Color(0.7, 0.7, 0.8, 1)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
modulate = Color(0.5, 0.5, 0.5, 1)

[node name="ModeButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AIVsAI" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18

[node name="PlayerHideAISeek" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18

[node name="PlayerSeekAIHide" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 18

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
modulate = Color(0.5, 0.5, 0.5, 1)

[node name="BottomButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Settings" type="Button" parent="VBoxContainer/BottomButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="Exit" type="Button" parent="VBoxContainer/BottomButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "v1.0 - Inspired by OpenAI Research"
horizontal_alignment = 1
modulate = Color(0.5, 0.5, 0.6, 1)

[node name="DescriptionPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="DescriptionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="DescriptionLabel" type="RichTextLabel" parent="DescriptionPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Description"
fit_content = true

[node name="BackButton" type="Button" parent="DescriptionPanel/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"
size_flags_horizontal = 8
